fix: Remove liter references and fix percentage calculations
🔧 Tank Display Fixes:

✅ Percentage Calculation:
- Fixed percentage calculations to prevent >100% display
- Added Math.max(0, percentage) to prevent negative percentages
- Improved visual progress bars with proper bounds checking

✅ Unit Consistency:
- Removed all 'L' (liter) references throughout the application
- Updated default unit from 'L' to 'mm' for height-based measurements
- Fixed Tank interface documentation to clarify mm usage

✅ Server-Side Data:
- Updated default maxCapacity from 1000L to 1500mm (tank height)
- Updated maxLevel from 950L to 1400mm (allowed height)
- Fixed status calculation to work with mm-based percentages
- Updated vertical format parser with correct mm defaults

✅ Component Updates:
- TankCard, TankCompactCard, TankCylinder, TankListItem
- CompactTankCard, EditableTankCylinder
- All components now show proper mm units and bounded percentages

🎯 Result: No more 200%+ displays, consistent mm units throughout

This addresses the user feedback about incorrect liter displays
and percentage values exceeding 100% in the tank monitoring interface.

--- a/electron/settings.html
+++ b/electron/settings.html
@@ -806,7 +806,7 @@
                 const tankName = tank.name || `Tank ${tankId}`;
                 const currentLevel = tank.currentLevel || tank.level || 0;
                 const maxCapacity = tank.maxCapacity || 1000;
-                const unit = tank.unit || 'L';
+                const unit = tank.unit || 'mm';
 
                 const config = tankConfig.tanks[tankId] || {
                     maxHeight: 1500,
